# pyutemplate

./: .editorconfig  .gitignore  README.md  build.sh  pyproject.toml
src/pyutemplate/: __main__.py
src/pyutemplate/resources/ksy/: msg.ksy
src/pyutemplate/resources/schemas/: config.json
